=======
CHANGES
=======

1.0 (Unreleased)
----------------

- Inistialization api has been refactored

- Directives implementation has been refactored

- Added event directive, description for event interface (introspection)

- Added simple settings management api

- Added 'settings' paste command.
  -a list all settings
  -l all settings descriptions
  -p dump all default settings

- Added process shutdown support `memphis.config.shutdownHandler`

- Allow execute 'action' directive withing method declaration.


0.6 (2011-06-29)
----------------

- Added different memphis initialization procedure.

- Change api for action directive.
  `discriminator` renamed to `__discriminator`,
  `actionOrder` renamed to `__order`.


0.5 (2011-06-20)
----------------

- Fix registerIn directives, organize all registrations by module.


0.4 (2011-06-19)
----------------

- Added 'registerIn' module directive, it allows
  to redirect all registrations to different Components object.

- Added ability to load grokkers before other code. Usefull
  if package implements grokkers and uses them at the same time.

- Re-register objectEventNodify handler rather than just register.
  This fixes bug with event been send two times.

- Action directive accepts custom __info attribute instead of 
  default getInfo.


0.3 (2011-06-02)
----------------

- Allow to redefine context of 'action' directive
  by passing frame object as '__frame' parameter.


0.1 (2011-05-27)
----------------

- Initial release